--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.0",
         "axios": "^0.21.1",
+        "gh-pages": "^3.1.0",
         "history": "^5.0.0",
         "lazy": "^1.0.11",
         "postcss": "^8.2.6",
@@ -23,8 +24,11 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
+    "homepage": "https://Romashka093.github.io/romashchenko-cv",
     "eslintConfig": {
         "extends": [
             "react-app",
